# Example file for making a CMake file
cmake_minimum_required(VERSION 3.24.0)
project(Test)
add_executable(Test main.cpp)
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
target_link_libraries(Test PUBLIC Eigen3::Eigen)
add_subdirectory(SO3)
target_link_libraries(Test PUBLIC SO3)
target_include_directories(Test PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/SO3")
add_subdirectory(BoxTree)
target_link_libraries(Test PUBLIC BoxTree)
target_include_directories(Test PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/BoxTree")
