add_library(BoxTree BoxTree.h BoxTree.cpp)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
target_link_libraries(BoxTree PUBLIC Eigen3::Eigen)

if (NOT TARGET Interval)
	add_subdirectory("../Interval" Interval)
endif()
target_link_libraries(BoxTree PUBLIC Interval)
target_include_directories(BoxTree PUBLIC "../Interval")

if (NOT TARGET SymGroup)
	add_subdirectory("../SymGroup" SymGroup)
endif()
target_link_libraries(BoxTree PUBLIC SymGroup)
target_include_directories(BoxTree PUBLIC "../SymGroup")